--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,10 +1,17 @@
 {
-	"name": "web",
+	"name": "@contextos/web",
 	"private": true,
 	"type": "module",
 	"scripts": {
 		"dev": "react-router dev",
-		"typecheck": "react-router typegen && tsc --noEmit"
+		"build": "react-router build",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"typecheck": "react-router typegen && tsc --noEmit",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+		"format": "prettier --write .",
+		"clean": "rm -rf dist build .react-router"
 	},
 	"dependencies": {
 		"@auth/core": "^0.37.2",
