--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,9 +1,22 @@
 {
-	"name": "mobile",
+	"name": "@contextos/mobile",
 	"main": "index",
 	"version": "1.0.0",
 	"scripts": {
-		"postinstall": "patch-package"
+		"dev": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"build:android": "eas build --platform android",
+		"build:ios": "eas build --platform ios",
+		"build:all": "eas build --platform all",
+		"test": "jest",
+		"typecheck": "tsc --noEmit",
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+		"format": "prettier --write .",
+		"postinstall": "patch-package",
+		"clean": "expo r -c"
 	},
 	"dependencies": {
 		"@expo-google-fonts/dev": "^0.4.7",
@@ -81,6 +94,10 @@
 	},
 	"devDependencies": {
 		"@types/react": "~19.0.10",
+		"@testing-library/jest-native": "^5.4.3",
+		"@testing-library/react-native": "^12.4.2",
+		"jest": "^29.7.0",
+		"jest-expo": "^52.0.0",
 		"autoprefixer": "10.4.20",
 		"patch-package": "^8.0.0",
 		"postcss": "8.5.2",
@@ -91,6 +108,12 @@
 		"react-native-graph": {
 			"@shopify/react-native-skia": "v2.0.0-next.4"
 		}
+	},
+	"jest": {
+		"preset": "jest-expo",
+		"transformIgnorePatterns": [
+			"node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+		]
 	},
 	"private": true
 }
